--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -1,64 +1,92 @@
 <mat-toolbar fxLayout="row" color="primary" id="midas-toolbar">
-
   <div class="app-brand m-r-20" [routerLink]="['/home']" *ngIf="!this.sidenav.opened" tourAnchor="toolbar-1">
     <img src="../../../../assets/images/Midas-logo.png" alt="app-logo" class="app-logo" />
     <span class="app-logo-text text-muted">MIDAS</span>
   </div>
 
   <div *ngIf="!this.isDesktop">
-    <button mat-mini-fab *ngIf="!sidenavCollapsed " (click)="toggleSidenav()" matTooltip="Bật menu">
+    <button mat-mini-fab *ngIf="!sidenavCollapsed" (click)="toggleSidenav()" matTooltip="Bật menu">
       <fa-icon icon="bars" size="lg"></fa-icon>
     </button>
   </div>
 
   <div fxLayout="row" fxLayoutGap.gt-md="1rem" fxLayoutGap.lt-md="0.75rem" *ngIf="this.isDesktop">
-
-    <button mat-mini-fab [matMenuTriggerFor]="institutionMenu" #institutionMenuTrigger="matMenuTrigger"
-      matTooltip="Thông tin khách hàng/ đại lý/ nhân viên" tourAnchor="toolbar-2-1">
+    <button
+      mat-mini-fab
+      [matMenuTriggerFor]="institutionMenu"
+      #institutionMenuTrigger="matMenuTrigger"
+      matTooltip="Thông tin khách hàng/ đại lý/ nhân viên"
+      tourAnchor="toolbar-2-1"
+    >
       <i class="fas fa-users"></i>
     </button>
 
-    <button mat-mini-fab [matMenuTriggerFor]="ListMenu" #ListMenuTrigger="matMenuTrigger"
-      matTooltip="Danh sách công nợ khách hàng/ tài khoản nhân viên" tourAnchor="toolbar-2-2">
+    <button
+      mat-mini-fab
+      [matMenuTriggerFor]="ListMenu"
+      #ListMenuTrigger="matMenuTrigger"
+      matTooltip="Danh sách công nợ khách hàng/ tài khoản nhân viên"
+      tourAnchor="toolbar-2-2"
+    >
       <i class="fas fa-list-ol"></i>
     </button>
 
-
-    <button mat-mini-fab [matMenuTriggerFor]="transactionMenu" #transactionMenuTrigger="matMenuTrigger"
-      matTooltip="Quản lý giao dịch và booking đại lý" tourAnchor="toolbar-2-3">
+    <button
+      mat-mini-fab
+      [matMenuTriggerFor]="transactionMenu"
+      #transactionMenuTrigger="matMenuTrigger"
+      matTooltip="Quản lý giao dịch và booking đại lý"
+      tourAnchor="toolbar-2-3"
+    >
       <i class="fas fa-money-check-alt"></i>
       <!-- <a matLine>Giao dịch</a> -->
     </button>
 
-    <button mat-mini-fab [matMenuTriggerFor]="BookingMenu" #BookingMenuTrigger="matMenuTrigger"
-      matTooltip="Booking tiền quỹ" tourAnchor="toolbar-2-4">
+    <button
+      mat-mini-fab
+      [matMenuTriggerFor]="BookingMenu"
+      #BookingMenuTrigger="matMenuTrigger"
+      matTooltip="Booking tiền quỹ"
+      tourAnchor="toolbar-2-4"
+    >
       <i class="fas fa-book-medical"></i>
       <!-- <a matLine>Booking</a> -->
     </button>
 
-    <button mat-mini-fab [matMenuTriggerFor]="POSPartnerMenu" #POSPartnerMenuTrigger="matMenuTrigger"
-      matTooltip="Danh sách máy POS - hạn mức còn lại" tourAnchor="toolbar-2-5">
+    <button
+      mat-mini-fab
+      [matMenuTriggerFor]="POSPartnerMenu"
+      #POSPartnerMenuTrigger="matMenuTrigger"
+      matTooltip="Danh sách máy POS - hạn mức còn lại"
+      tourAnchor="toolbar-2-5"
+    >
       <i class="fas fa-hands-helping"></i>
       <!-- <a matLine>Máy POS và đối tác</a> -->
     </button>
 
-    <button  mat-mini-fab [routerLink]="['/checker-inbox-and-tasks/checker-inbox']" matTooltip="Phê duyệt">     
-        <i class="fa fa-check"></i>      
+    <button mat-mini-fab [routerLink]="['/checker-inbox-and-tasks/checker-inbox']" matTooltip="Phê duyệt">
+      <i class="fa fa-check"></i>
     </button>
 
     <div *midasHasPermission="'POS_UPDATE'">
-      <button mat-mini-fab *midasHasActiveModule="'campaignModule'" [matMenuTriggerFor]="MarketingMenu"
-        #MarketingMenuTrigger="matMenuTrigger">
-
+      <button
+        mat-mini-fab
+        *midasHasActiveModule="'campaignModule'"
+        [matMenuTriggerFor]="MarketingMenu"
+        #MarketingMenuTrigger="matMenuTrigger"
+      >
         <i class="fas fa-ad"></i>
         <!-- <a matLine>Marketing</a> -->
-
       </button>
     </div>
     <div fxLayout="row" *midasHasPermission="'ALL_FUNCTIONS'" fxLayoutGap.gt-md="1rem" fxLayoutGap.lt-md="0.75rem">
-
-      <button mat-mini-fab color="basic" *midasHasActiveModule="'billModule'" [routerLink]="['/bills']"
-        matTooltip="Quản lý hóa đơn đầu vào">
+      <button
+        mat-mini-fab
+        color="basic"
+        *midasHasActiveModule="'billModule'"
+        [routerLink]="['/bills']"
+        matTooltip="Quản lý hóa đơn đầu vào"
+      >
         <i class="fas fa-receipt"></i>
       </button>
 
@@ -66,40 +94,47 @@
         <i class="fas fa-university"></i>
       </button>
 
-      <button mat-mini-fab color="basic" [matMenuTriggerFor]="accountingMenu" #accountingMenuTrigger="matMenuTrigger"
-        matTooltip="Quản trị hệ thống">
+      <button
+        mat-mini-fab
+        color="basic"
+        [matMenuTriggerFor]="accountingMenu"
+        #accountingMenuTrigger="matMenuTrigger"
+        matTooltip="Quản trị hệ thống"
+      >
         <i class="fas fa-cogs"></i>
       </button>
     </div>
   </div>
 
-  <!-- <button mat-mini-fab *ngIf="sidenav.opened" (click)="toggleSidenavCollapse()" matTooltip="Toggle Collapse"
-    fxHide.lt-md="true">
-    <fa-icon *ngIf="!sidenavCollapsed" icon="chevron-left"></fa-icon>
-    <fa-icon *ngIf="sidenavCollapsed" icon="chevron-right"></fa-icon>
-  </button> -->
-
-  <div fxFlex fxLayout="row" fxLayoutAlign="end around" fxLayoutAlign.lt-md="end center" *ngIf="this.isDesktop"
-  fxLayoutGap="0.5rem">
-    <!-- <span ></span> -->
-    <div fxLayout="row"  fxLayoutAlign="end center" fxLayoutGap="0.5rem">
-     <span style="color:black">{{userFullname }}</span> 
-      <button mat-mini-fab fxHide.lt-md mat-icon-button [matMenuTriggerFor]="applicationMenu" class="m-r-15"
-        matTooltip="Profile của {{ userFullname }}" tourAnchor="toolbar-4">
+  <div
+    fxFlex
+    fxLayout="row"
+    fxLayoutAlign="end around"
+    fxLayoutAlign.lt-md="end center"
+    *ngIf="this.isDesktop"
+    fxLayoutGap="0.5rem"
+  >
+    <div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="0.5rem">
+      <span style="color: black">{{ userFullname }}</span>
+      <button
+        mat-mini-fab
+        fxHide.lt-md
+        mat-icon-button
+        [matMenuTriggerFor]="applicationMenu"
+        class="m-r-15"
+        matTooltip="Profile của {{ userFullname }}"
+        tourAnchor="toolbar-4"
+      >
         <i class="fas fa-user-cog"></i>
       </button>
-
     </div>
     <midas-theme-picker fxHide.lt-md class="m-r-15" *ngIf="this.isCommercial"></midas-theme-picker>
 
     <midas-notifications-tray fxHide.lt-md class="m-r-15" tourAnchor="toolbar-3"> </midas-notifications-tray>
     <!-- <br /> -->
-
   </div>
 
   <midas-user-account-info fxLayout="row" style="min-width: 10rem"></midas-user-account-info>
-
-
 </mat-toolbar>
 
 <!-- Application User Help Menu -->
@@ -138,11 +173,7 @@
 </mat-menu>
 
 <!-- Mobile: Floating Menu -->
-<midas-menu *ngIf="!isDesktop" style="
- position: fixed;
- bottom: 1%;
- right: 3%;">
-</midas-menu>
+<midas-menu *ngIf="!isDesktop" style="position: fixed; bottom: 1%; right: 3%"> </midas-menu>
 <!-- End Mobile: Floatign menu -->
 
 <!-- Mat-menu của billpos -->
@@ -150,9 +181,6 @@
   <button mat-menu-item routerLink="/clients/staff">Nhân viên</button>
   <button mat-menu-item routerLink="/clients/customer">{{ "Toolbar_Component.lblClient" | translate }}</button>
   <button mat-menu-item routerLink="/groups">{{ "Toolbar_Component.lblGroup" | translate }}</button>
-  <button mat-menu-item routerLink="/clients/interchange">Đối tác Interchange</button>
-  <button mat-menu-item *midasHasPermission="'ALL_FUNCTIONS'" routerLink="/centers">Centers</button>
-
 </mat-menu>
 
 <mat-menu #ListMenu="matMenu" [overlapTrigger]="false">
@@ -165,15 +193,10 @@
   <button mat-menu-item *midasHasPermission="'POS_UPDATE'" routerLink="/accounts/balance-teller">
     {{ "Quản lý số dư teller" | translate }}
   </button>
-
 </mat-menu>
 
 <mat-menu #POSPartnerMenu="matMenu" [overlapTrigger]="false">
-  <!-- <button *midasHasPermission="'POS_UPDATE'" mat-menu-item routerLink="/terminals">
-          Điều chuyển máy POS
-        </button> -->
-  <button mat-menu-item *midasHasPermission="'POS_READ'" routerLink="/terminals/limit">{{ "Quản lý hạn mức POS" |
-    translate }}</button>
+  <button mat-menu-item routerLink="/terminals/limit">{{ "Quản lý hạn mức POS" | translate }}</button>
   <button mat-menu-item *midasHasPermission="'POS_UPDATE'" routerLink="/terminals">
     {{ "Quản lý máy POS" | translate }}
   </button>
@@ -181,21 +204,18 @@
     {{ "Toolbar_Component.lblThirdParty" | translate }}
   </button>
   <!-- <button mat-menu-item routerLink="/groups/spending-limit">Hạn mức chi tiêu</button> -->
-
 </mat-menu>
 
 <mat-menu #transactionMenu="matMenu" [overlapTrigger]="false">
   <button mat-menu-item routerLink="/transaction">Quản lý giao dịch</button>
-  <button mat-menu-item routerLink="/transaction/rollTermSchedule">Quản lý đáo hạn thẻ</button>
+  <button mat-menu-item routerLink="/transaction/rollTermSchedule">Quản lý Advance</button>
   <button mat-menu-item routerLink="/transaction/fee-paid-management">Quản lý phí giao dịch</button>
   <button mat-menu-item routerLink="/booking/agency">Quản lý booking của Đại lý</button>
 </mat-menu>
 
 <mat-menu #BookingMenu="matMenu" [overlapTrigger]="false">
-
   <button mat-menu-item routerLink="/booking/create">Tạo booking nội bộ</button>
-  <button *midasHasPermission="'POS_UPDATE'" mat-menu-item routerLink="/booking/view">Quản lý booking nội
-    bộ</button>
+  <button *midasHasPermission="'POS_UPDATE'" mat-menu-item routerLink="/booking/view">Quản lý booking nội bộ</button>
 </mat-menu>
 
 <mat-menu #Marketing="matMenu" [overlapTrigger]="false">
@@ -226,8 +246,7 @@
 </mat-menu>
 
 <mat-menu #accountingMenu="matMenu" [overlapTrigger]="false">
-  <button mat-menu-item [routerLink]="['/accounting']">{{ "Toolbar_Component.lblAccounting" | translate
-    }}</button>
+  <button mat-menu-item [routerLink]="['/accounting']">{{ "Toolbar_Component.lblAccounting" | translate }}</button>
   <button mat-menu-item [matMenuTriggerFor]="reportsMenu">{{ "Toolbar_Component.lblReport" | translate }}</button>
   <button mat-menu-item [matMenuTriggerFor]="adminMenu">{{ "Toolbar_Component.lblAdmin" | translate }}</button>
   <button mat-menu-item [matMenuTriggerFor]="selfServiceMenu">
