--- a/src/app/transactions/fee-paid-management/fee-paid-management.component.html
+++ b/src/app/transactions/fee-paid-management/fee-paid-management.component.html
@@ -195,7 +195,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Loại GD</th>
         <td mat-cell *matCellDef="let transaction" [ngSwitch]="getDataOfGroupTxnCode(transaction)[0].txnType">
           <button *ngSwitchCase="'CASH'" style="background: green; color: white" mat-button class="btn btn-success">
-            RTM
+            Cash
           </button>
           <button
             *ngSwitchCase="'ROLLTERM'"
@@ -203,7 +203,7 @@
             mat-button
             class="btn btn-success"
           >
-            ĐHT
+            Advance
           </button>
           <button *ngSwitchCase="'BATCH'" style="background: #e74c3c; color: white" mat-button class="btn btn-success">
             Lô
