--- a/src/app/booking-manage/view-internal-booking/view-internal-booking.component.html
+++ b/src/app/booking-manage/view-internal-booking/view-internal-booking.component.html
@@ -3,7 +3,7 @@
     <mat-tab label="Danh sách booking nội bộ">
       <midas-internal-booking-tab></midas-internal-booking-tab>
     </mat-tab>
-    <mat-tab label="Danh sách booking ĐHT">
+    <mat-tab label="Danh sách booking Advance">
       <midas-roll-term-schedule-booking-tab></midas-roll-term-schedule-booking-tab>
     </mat-tab>
   </mat-tab-group>
