--- a/src/app/transactions/create-transaction/create-transaction.component.html
+++ b/src/app/transactions/create-transaction/create-transaction.component.html
@@ -1,6 +1,6 @@
 <div class="container m-b-5" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="end" fxLayoutGap="1%">
   <div fxFlex="100%" align="center" class="header">
-    <h2  class="m-5">MÀN HÌNH GIAO DỊCH - THÔNG TIN GIAO DỊCH</h2>
+    <h2 class="m-5">MÀN HÌNH GIAO DỊCH - THÔNG TIN GIAO DỊCH</h2>
   </div>
 </div>
 <div class="container" fxLayout="column" fxLayoutGap="2%">
@@ -13,10 +13,10 @@
         <div fxFlex.gt-sm="50%" fxLayout="row wrap" class="content">
           <div fxFlex="100%">
             Loại giao dịch :
-            <span style="color: green; font-weight: bold" *ngIf="transactionInfo.type == 'cash'">RÚT TIỀN MẶT</span>
-            <span style="color: green; font-weight: bold" *ngIf="transactionInfo.type == 'rollTerm'">ĐÁO HẠN THẺ</span>
+            <span style="color: green; font-weight: bold" *ngIf="transactionInfo.type == 'cash'">Cash</span>
+            <span style="color: green; font-weight: bold" *ngIf="transactionInfo.type == 'rollTerm'">Advance</span>
             <span style="color: green; font-weight: bold" *ngIf="transactionInfo.type == 'rollTermGetCash'"
-              >THU HỒI ĐÁO HẠN THẺ</span
+              >THU HỒI Advance</span
             >
           </div>
           <div fxFlex="100%" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column">
@@ -68,7 +68,8 @@
                   [ngModelOptions]="{ standalone: true }"
                   (change)="this.calculateFeeTransaction()"
                 >
-                  <option value="CA01">RTM thông thường</option>
+                  <option value="CA01">Cash thông thường</option>
+                  <option value="CA03">Cash - tiền chờ</option>
                   <option value="TEST">Test thẻ</option>
                   <option value="CA02">Lô lẻ</option>
                 </select>
@@ -102,7 +103,7 @@
                   (keyup)="amountTransaction.value = this.formatCurrency(amountTransaction.value)"
                   #amountTransaction
                 />
-                <mat-error > Thông tin bắt buộc nhập! </mat-error>
+                <mat-error> Thông tin bắt buộc nhập! </mat-error>
               </mat-form-field>
             </div>
             <div fxFlex.gt-sm="10%">
@@ -115,7 +116,7 @@
                   formControlName="rate"
                   (change)="this.onchangeRate($event)"
                 />
-                <mat-error > Thông tin bắt buộc nhập! </mat-error>
+                <mat-error> Thông tin bắt buộc nhập! </mat-error>
               </mat-form-field>
             </div>
           </div>
@@ -167,7 +168,6 @@
               <div fxFlex="20%">{{ formatCurrency(transactionInfo.txnAmountAfterFee) }}</div>
               <div fxFlex="20%"></div>
             </div>
-
           </div>
         </div>
       </div>
@@ -187,7 +187,7 @@
         align="center"
         style="color: blue; font-weight: bold"
       >
-        Lịch thực hiện đáo hạn thẻ (Tổng: {{ this.formatCurrency(this.totalBookingAmount) }})
+        Lịch thực hiện Advance (Tổng: {{ this.transactionInfo.requestAmount }})
       </h3>
       <div
         fxFlex="100%"
@@ -205,14 +205,14 @@
             <th mat-header-cell *matHeaderCellDef>Số tiền</th>
             <td mat-cell *matCellDef="let booking; let i = index">
               <mat-form-field>
-              <input
-                matInput
-                [(ngModel)]="booking.amountBooking"
-                [disabled]="i == ( listRollTermBooking.length - 1 ) "
-                [ngModelOptions]="{ standalone: true }"
-                (change)="this.calculateTotalBookingAmount()"
-                (keyup)="booking.amountBooking = this.formatCurrency(booking.amountBooking)"
-                required
+                <input
+                  matInput
+                  [(ngModel)]="booking.amountBooking"
+                  [disabled]="i == listRollTermBooking.length - 1"
+                  [ngModelOptions]="{ standalone: true }"
+                  (change)="this.calculateTotalBookingAmount()"
+                  (keyup)="booking.amountBooking = this.formatCurrency(booking.amountBooking)"
+                  required
                 />
               </mat-form-field>
             </td>
@@ -276,7 +276,7 @@
                 matNativeControl
               >
                 <option *ngFor="let terminal of transactionInfo.listTerminal" [value]="terminal.terminalId">
-                  {{ terminal.terminalName }} - Hạn mức khả dụng: {{ terminal.limitRemain  | money }}
+                  {{ terminal.terminalName }} - Hạn mức khả dụng: {{ terminal.limitRemain | money }}
                 </option>
               </select>
             </mat-form-field>
@@ -288,7 +288,7 @@
             <mat-form-field>
               <mat-label>Số tiền cần quẹt(VNĐ)</mat-label>
               <input readonly matInput formControlName="txnAmount" />
-              <mat-error > Thông tin bắt buộc nhập! </mat-error>
+              <mat-error> Thông tin bắt buộc nhập! </mat-error>
             </mat-form-field>
           </div>
         </div>
@@ -303,7 +303,7 @@
                 (change)="this.calculateFeeTransaction()"
                 (keyup)="amountPosBill.value = this.formatCurrency(amountPosBill.value)"
               />
-              <mat-error > Thông tin bắt buộc nhập! </mat-error>
+              <mat-error> Thông tin bắt buộc nhập! </mat-error>
             </mat-form-field>
           </div>
         </div>
@@ -312,7 +312,7 @@
             <mat-form-field>
               <mat-label> Số batch</mat-label>
               <input matInput formControlName="batchNo" />
-              <mat-error > Thông tin bắt buộc nhập! </mat-error>
+              <mat-error> Thông tin bắt buộc nhập! </mat-error>
             </mat-form-field>
           </div>
         </div>
@@ -321,7 +321,7 @@
             <mat-form-field>
               <mat-label> Số trace</mat-label>
               <input matInput formControlName="traceNo" />
-              <mat-error > Thông tin bắt buộc nhập! </mat-error>
+              <mat-error> Thông tin bắt buộc nhập! </mat-error>
             </mat-form-field>
           </div>
         </div>
